latex2mmlc/tests/snapshots/wiki_test__wiki160.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\aleph \\beth \\gimel \\daleth"
---
<math>
    <mi>ℵ</mi>
    <mi>ℶ</mi>
    <mi>ℷ</mi>
    <mi>ℸ</mi>
</math>
