latex2mmlc/tests/snapshots/wiki_test__wiki163.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\boldsymbol{\\Alpha \\Beta \\Gamma \\Delta \\Epsilon \\Zeta \\Eta \\Theta}"
---
<math>
    <mi>𝚨𝚩𝚪𝚫𝚬𝚭𝚮𝚯</mi>
</math>
