latex2mmlc/tests/snapshots/wiki_test__wiki165.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\boldsymbol{\\Rho \\Sigma \\Tau \\Upsilon \\Phi \\Chi \\Psi \\Omega}"
---
<math>
    <mrow>
        <mi>𝚸</mi>
        <mi>𝚺</mi>
        <mi>𝚻</mi>
        <mi>𝚼</mi>
        <mi>𝚽</mi>
        <mi>𝚾</mi>
        <mi>𝚿</mi>
        <mi>𝛀</mi>
    </mrow>
</math>
