latex2mmlc/tests/snapshots/wiki_test__wiki166.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\boldsymbol{\\alpha \\beta \\gamma \\delta \\epsilon \\zeta \\eta \\theta}"
---
<math>
    <mi>𝜶𝜷𝜸𝜹𝝐𝜻𝜼𝜽</mi>
</math>
