latex2mmlc/tests/snapshots/wiki_test__wiki169.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\boldsymbol{\\varepsilon\\digamma\\varkappa \\varpi}"
---
<math>
    <mi>𝜺ϝ𝝒𝝕</mi>
</math>
