latex2mmlc/tests/snapshots/wiki_test__wiki170.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\boldsymbol{\\varrho\\varsigma\\vartheta\\varphi}"
---
<math>
    <mi>𝝔𝝇𝝑𝝋</mi>
</math>
